Edited the last line

--- a/docs/content/contribute/_index.adoc
+++ b/docs/content/contribute/_index.adoc
@@ -10,3 +10,4 @@ Contributions can come from a wide range of skills and expertise. Every contribu
 
 As an open source project, we welcome contribution in a variety of forms, including taking part in discussions, filing bug reports, proposing improvements, as well as contributing code or documentation.
 
+Here it is
